crates/fig-lexer/tests/snapshots/integration_tests__unions__many_variants.snap
---
source: crates/fig-lexer/tests/integration_tests.rs
expression: tokens
---
- Union
- Ident: Value
- Newline
- Indent
- Ident: null_val
- Colon
- OkLiteral
- Newline
- Ident: bool_val
- Colon
- Bool
- Newline
- Ident: int_val
- Colon
- I64
- Newline
- Ident: float_val
- Colon
- F64
- Newline
- Ident: string_val
- Colon
- LBracket
- U8
- RBracket
- Newline
- Ident: array_val
- Colon
- Star
- Ident: Value
- Newline
- Dedent
