crates/fig-lexer/tests/snapshots/integration_tests__unions__namespaced.snap
---
source: crates/fig-lexer/tests/integration_tests.rs
expression: tokens
---
- Union
- Core
- ColonColon
- Ident: error
- ColonColon
- Ident: IoResult
- LBracket
- Ident: T
- RBracket
- Newline
- Indent
- OkLiteral
- Colon
- Ident: T
- Newline
- Ident: err
- Colon
- Ident: IoError
- Newline
- Dedent
- Union
- Ident: math
- ColonColon
- Ident: Number
- Newline
- Indent
- Ident: integer
- Colon
- I64
- Newline
- Ident: rational
- Colon
- F64
- Newline
- Dedent
