crates/fig-lexer/tests/snapshots/integration_tests__unions__simple.snap
---
source: crates/fig-lexer/tests/integration_tests.rs
expression: tokens
---
- Union
- Ident: IntOrFloat
- Newline
- Indent
- Ident: integer
- Colon
- I32
- Newline
- Ident: floating
- Colon
- F64
- Newline
- Dedent
