crates/fig-lexer/tests/snapshots/integration_tests__unions__visibility.snap
---
source: crates/fig-lexer/tests/integration_tests.rs
expression: tokens
---
- Public
- Union
- Ident: PublicResult
- LBracket
- Ident: T
- Comma
- Ident: E
- RBracket
- Newline
- Indent
- OkLiteral
- Colon
- Ident: T
- Newline
- Ident: err
- Colon
- Ident: E
- Newline
- Dedent
- Export
- Union
- Ident: ExportedMaybe
- LBracket
- Ident: T
- RBracket
- Newline
- Indent
- Ident: some
- Colon
- Ident: T
- Newline
- Ident: none
- Colon
- OkLiteral
- Newline
- Dedent
